tests/good/misc/no-recursion.pas
program NoRecursion;

function Foo;
begin
    Foo := 1;
    if foo = 1 then WriteLn('Hello!')
end;

begin
    Foo
end.
