tests/bad/const-type-string.pas
program const_type_string;

const
    s: string = 1;

begin
end.
